--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -39,6 +39,71 @@ HOST-SUFFIX,flurry.com,REJECT
 HOST-SUFFIX,lnk0.com,REJECT
 
 //REJECT
+
+// Advertisement-and-Tracking-ProtectionsHOST-SUFFIX,adinall.com,REJECTHOST-SUFFIX,adjust.com,REJECTHOST-SUFFIX,adlefee.com,REJECTHOST-SUFFIX,admaster.com.cn,REJECTHOST-SUFFIX,adview.cn,REJECTHOST-SUFFIX,aerserv.com,REJECTHOST-SUFFIX,alipaylog.com,REJECTHOST-SUFFIX,amazon-adsystem.com,REJECTHOST-SUFFIX,appadhoc.com,REJECTHOST-SUFFIX,appsflyer.com,REJECTHOST-SUFFIX,cnzz.com,REJECTHOST-SUFFIX,cocounion.com,REJECTHOST-SUFFIX,crwdcntrl.net,REJECTHOST-SUFFIX,ctrmi.com,REJECTHOST-SUFFIX,doubleclick.net,REJECTHOST-SUFFIX,googleadservices.com,REJECTHOST-SUFFIX,googleadsserving.cn,REJECTHOST-SUFFIX,google-analytics.com,REJECTHOST-SUFFIX,googlesyndication.com,REJECTHOST-SUFFIX,growingio.com,REJECTHOST-SUFFIX,inmobi.cn,REJECTHOST-SUFFIX,inmobi.com,REJECTHOST-SUFFIX,irs01.com,REJECTHOST-SUFFIX,kejet.net,REJECTHOST-SUFFIX,lnk0.com,REJECTHOST-SUFFIX,miaozhen.com,REJECTHOST-SUFFIX,moatads.com,REJECTHOST-SUFFIX,mobileapptracking.com,REJECTHOST-SUFFIX,mopub.com,REJECTHOST-SUFFIX,qchannel01.cn,REJECTHOST-SUFFIX,rayjump.com,REJECTHOST-SUFFIX,scorecardresearch.com,REJECTHOST-SUFFIX,serving-sys.com,REJECTHOST-SUFFIX,talkingdata.com,REJECTHOST-SUFFIX,tanx.com,REJECTHOST-SUFFIX,tuanxue360.net,REJECTHOST-SUFFIX,udrig.com,REJECTHOST-SUFFIX,umeng.com,REJECTHOST-SUFFIX,umengcloud.com,REJECTHOST-SUFFIX,voiceads.cn,REJECTHOST-SUFFIX,xdrig.com,REJECTHOST-SUFFIX,iadsdk.apple.com,REJECT
+HOST,ad.12306.cn,REJECTHOST,ad.caiyunapp.com,REJECTHOST,ad.jiemian.com,REJECTHOST,ad-cn.jovcloud.com,REJECTHOST,adnew.wifi8.com,REJECTHOST,adplatform.vrtcal.com,REJECTHOST,ads.nexage.com,REJECTHOST,ads.simplepath.com,REJECTHOST,adshow.58.com,REJECTHOST,adshows.21cn.com,REJECTHOST,ads-twitter.com,REJECTHOST,adui.tg.meitu.com,REJECTHOST,adxserver.ad.cmvideo.cn,REJECTHOST,cdn.segment.com,REJECTHOST,data.flurry.com,REJECTHOST,ggs.myzaker.com,REJECTHOST,js.users.51.la,REJECTHOST,static.jpush.cn,REJECTHOST,sugar.zhihu.com,REJECTHOST,track.58.com,REJECT
+
+// BaiduHOST-SUFFIX,baidustatic.com,REJECTHOST,hm.baidu.com,REJECTHOST,hmma.baidu.com,REJECTHOST,mobads.baidu.com,REJECTHOST,mobads-logs.baidu.com,REJECTHOST,wn.pos.baidu.com,REJECT
+// - Baidu-High-ACC-IPHOST,ps.map.baidu.com,REJECTHOST,sv.map.baidu.com,REJECTHOST,offnavi.map.baidu.com,REJECTHOST,newvector.map.baidu.com,REJECTHOST,ulog.imap.baidu.com,REJECTHOST,newloc.map.n.shifen.com,REJECT
+
+// AliHOST,acs4baichuan.m.taobao.com,REJECTHOST,adash-c.ut.taobao.com,REJECTHOST,adashxgc.ut.taobao.com,REJECTHOST,adashbc.ut.taobao.com,REJECTHOST,adash.man.aliyuncs.com,REJECTHOST,apoll.m.taobao.com,REJECTHOST,amdc.m.taobao.com,REJECT
+
+// TencentHOST-SUFFIX,e.qq.com,REJECTHOST-SUFFIX,l.qq.com,REJECTHOST,pingma.qq.com,REJECTHOST,mi.gdt.qq.com,REJECTHOST,btrace.qq.com,REJECTHOST,mtrace.qq.com,REJECT
+
+// 163HOST-SUFFIX,analytics.126.net,REJECTHOST,iadmat.nosdn.127.net,REJECTHOST,static.ws.126.net,REJECT
+
+// AutoNaviHOST,nbsdk-baichuan.alicdn.com,REJECT
+
+// iQiyiHOST-SUFFIX,cupid.iqiyi.com,REJECTHOST,ifacelog.iqiyi.com,REJECTHOST,mbdlog.iqiyi.com,REJECTHOST,msg.71.am,REJECT
+IP-CIDR,101.227.97.240/32,REJECT,no-resolve
+IP-CIDR,101.227.200.11/32,REJECT,no-resolve
+IP-CIDR,101.227.200.28/32,REJECT,no-resolve
+IP-CIDR,124.192.153.42/32,REJECT,no-resolve
+
+// YoukuHOST-SUFFIX,atm.youku.com,REJECTHOST,ad.mobile.youku.com,REJECTHOST,iyes.youku.com,REJECT
+
+// - SohuVideoHOST-SUFFIX,aty.sohu.com,REJECTHOST,imp.optaim.com,REJECTHOST,v2.reachmax.cn,REJECTHOST,data.vod.itc.cn,REJECT
+
+// PPTVHOST,asimgs.pplive.cn,REJECT
+
+// XiMaLaYaHOST,ad.ximalaya.com,REJECT
+
+// MojiHOST,ad.api.moji.com,REJECTHOST,v1.log.moji.com,REJECT
+
+// PhotoableHOST,regist.fotoable.com,REJECTHOST,cdn.adapi.fotoable.com,REJECTHOST,adapi-analytics.fotoable.net,REJECT
+
+// UCHOST,adtrack.ucweb.com,REJECTHOST,applogios.uc.cn,REJECTHOST,track.uc.cn,REJECT
+
+// Internet Service Provider HijackHOST-SUFFIX,17gouwuba.com,REJECTHOST-SUFFIX,285680.com,REJECTHOST-SUFFIX,51chumoping.com,REJECTHOST-SUFFIX,9s6q.cn,REJECTHOST-SUFFIX,aiclk.com,REJECTHOST-SUFFIX,bayimob.com,REJECTHOST-SUFFIX,bianxianmao.com,REJECTHOST-SUFFIX,bryonypie.com,REJECTHOST-SUFFIX,cszlks.com,REJECTHOST-SUFFIX,cudaojia.com,REJECTHOST-SUFFIX,feih.com.cn,REJECTHOST-SUFFIX,fjlqqc.com,REJECTHOST-SUFFIX,fkku194.com,REJECTHOST-SUFFIX,freedrive.cn,REJECTHOST-SUFFIX,kumihua.com,REJECTHOST-SUFFIX,mlnbike.com,REJECTHOST-SUFFIX,poppyta.com,REJECTHOST-SUFFIX,qichexin.com,REJECTHOST-SUFFIX,quanliyouxi.cn,REJECTHOST-SUFFIX,sifuhe.cn,REJECTHOST-SUFFIX,sg536.cn,REJECTHOST-SUFFIX,topitme.com,REJECTHOST-SUFFIX,tuipenguin.com,REJECT
+IP-CIDR,47.89.59.182/32,REJECT,no-resolve
+// - ChinaNet
+IP-CIDR,61.160.200.223/32,REJECT,no-resolve
+IP-CIDR,61.160.200.242/32,REJECT,no-resolve
+IP-CIDR,61.160.200.252/32,REJECT,no-resolve
+IP-CIDR,111.175.220.164/32,REJECT,no-resolve
+IP-CIDR,124.232.160.178/32,REJECT,no-resolve
+IP-CIDR,175.6.223.15/32,REJECT,no-resolve
+IP-CIDR,183.59.53.237/32,REJECT,no-resolve
+IP-CIDR,218.93.127.37/32,REJECT,no-resolve
+IP-CIDR,221.231.6.79/32,REJECT,no-resolve
+IP-CIDR,222.186.61.91/32,REJECT,no-resolve
+IP-CIDR,222.186.61.95/32,REJECT,no-resolve
+IP-CIDR,222.186.61.96/32,REJECT,no-resolve
+// - Dr.Peng
+IP-CIDR,10.72.25.0/24,REJECT,no-resolve
+IP-CIDR,115.182.16.79/32,REJECT,no-resolve
+IP-CIDR,118.144.88.126/32,REJECT,no-resolve
+IP-CIDR,118.144.88.215/32,REJECT,no-resolve
+IP-CIDR,120.76.189.132/32,REJECT,no-resolve
+IP-CIDR,124.14.21.147/32,REJECT,no-resolve
+IP-CIDR,124.14.21.151/32,REJECT,no-resolve
+IP-CIDR,180.166.52.24/32,REJECT,no-resolve
+IP-CIDR,220.115.251.25/32,REJECT,no-resolve
+IP-CIDR,222.73.156.235/32,REJECT,no-resolve
+
+// BlacklistHOST-SUFFIX,abbyychina.com,REJECTHOST-SUFFIX,bartender.cc,REJECTHOST-SUFFIX,betterzip.net,REJECTHOST-SUFFIX,beyondcompare.cc,REJECTHOST-SUFFIX,bingdianhuanyuan.cn,REJECTHOST-SUFFIX,chemdraw.com.cn,REJECTHOST-SUFFIX,cjmkt.com,REJECTHOST-SUFFIX,codesoftchina.com,REJECTHOST-SUFFIX,coreldrawchina.com,REJECTHOST-SUFFIX,crossoverchina.com,REJECTHOST-SUFFIX,easyrecoverychina.com,REJECTHOST-SUFFIX,ediuschina.com,REJECTHOST-SUFFIX,flstudiochina.com,REJECTHOST-SUFFIX,guitarpro.cc,REJECTHOST-SUFFIX,huishenghuiying.com.cn,REJECTHOST-SUFFIX,imindmap.cc,REJECTHOST-SUFFIX,jihehuaban.com.cn,REJECTHOST-SUFFIX,keyshot.cc,REJECTHOST-SUFFIX,mairuan.com,REJECTHOST-SUFFIX,makeding.com,REJECTHOST-SUFFIX,mathtype.cn,REJECTHOST-SUFFIX,mindmanager.cc,REJECTHOST-SUFFIX,mycleanmymac.com,REJECTHOST-SUFFIX,nicelabel.cc,REJECTHOST-SUFFIX,ntfsformac.cc,REJECTHOST-SUFFIX,ntfsformac.cn,REJECTHOST-SUFFIX,overturechina.com,REJECTHOST-SUFFIX,vegaschina.cn,REJECTHOST-SUFFIX,xmindchina.net,REJECTHOST-SUFFIX,xshellcn.com,REJECTHOST-SUFFIX,xshellcn.com,REJECTHOST-SUFFIX,yuanchengxiezuo.com,REJECTHOST-SUFFIX,zbrushcn.com,REJECT
+
+
 HOST-SUFFIX,irs01.com,REJECT
 HOST-SUFFIX,fc-feed.cdn.bcebos.com,REJECT
 HOST-SUFFIX,zkres.myzaker.com,REJECT
