--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -39,8 +39,9 @@ HOST-SUFFIX,cordcloud.me,PROXY,force-remote-dns
 HOST-SUFFIX,playno1.com,PROXY
 HOST-SUFFIX,flurry.com,REJECT
 HOST-SUFFIX,lnk0.com,REJECT
-URL-REGEX,*apple.com/cn,🍎 Only
 
+# APPLE
+URL-REGEX,*apple.com/cn,🍎 Only
 USER-AGENT,%E5%9C%B0%E5%9B%BE*,🍎 Only // Maps
 USER-AGENT,%E8%AE%BE%E7%BD%AE*,🍎 Only // Settings
 USER-AGENT,*com.apple.mobileme.fmip1,🍎 Only
