--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -1,11 +1,8 @@
-# 2018.5.17
-
 [General]
 bypass-system = true
-dns-server = system
+dns-server = 119.29.29.29,1.0.0.1,223.5.5.5
 skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,17.0.0.0/8,localhost,*.local
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
-
 [Rule]
 //me
 DOMAIN-SUFFIX,lxysh.top,DIRECT
@@ -25,9 +22,7 @@ DOMAIN-SUFFIX,cordcloud.me,PROXY,force-remote-dns
 DOMAIN-SUFFIX,playno1.com,PROXY
 DOMAIN-SUFFIX,flurry.com,REJECT
 DOMAIN-SUFFIX,lnk0.com,REJECT
-
 //REJECT
-
 // Advertisement-and-Tracking-Protections
 DOMAIN-SUFFIX,adinall.com,REJECT
 DOMAIN-SUFFIX,adjust.com,REJECT
@@ -39,21 +34,20 @@ DOMAIN-SUFFIX,alipaylog.com,REJECT
 DOMAIN-SUFFIX,amazon-adsystem.com,REJECT
 DOMAIN-SUFFIX,appadhoc.com,REJECT
 DOMAIN-SUFFIX,appsflyer.com,REJECT
-DOMAIN-SUFFIX,cnzz.com,REJECT
+DOMAIN-KEYWORD,cnzz,REJECT
 DOMAIN-SUFFIX,cocounion.com,REJECT
 DOMAIN-SUFFIX,crwdcntrl.net,REJECT
 DOMAIN-SUFFIX,ctrmi.com,REJECT
 DOMAIN-SUFFIX,doubleclick.net,REJECT
 DOMAIN-SUFFIX,googleadservices.com,REJECT
 DOMAIN-SUFFIX,googleadsserving.cn,REJECT
-DOMAIN-SUFFIX,google-analytics.com,REJECT
+DOMAIN-KEYWORD,analytics,REJECT
 DOMAIN-SUFFIX,googlesyndication.com,REJECT
 DOMAIN-SUFFIX,growingio.com,REJECT
 DOMAIN-SUFFIX,inmobi.cn,REJECT
 DOMAIN-SUFFIX,inmobi.com,REJECT
 DOMAIN-SUFFIX,irs01.com,REJECT
 DOMAIN-SUFFIX,kejet.net,REJECT
-DOMAIN-SUFFIX,lnk0.com,REJECT
 DOMAIN-SUFFIX,miaozhen.com,REJECT
 DOMAIN-SUFFIX,moatads.com,REJECT
 DOMAIN-SUFFIX,mobileapptracking.com,REJECT
@@ -66,7 +60,7 @@ DOMAIN-SUFFIX,talkingdata.com,REJECT
 DOMAIN-SUFFIX,tanx.com,REJECT
 DOMAIN-SUFFIX,tuanxue360.net,REJECT
 DOMAIN-SUFFIX,udrig.com,REJECT
-DOMAIN-SUFFIX,umeng.com,REJECT
+DOMAIN-KEYWORD,umeng,REJECT
 DOMAIN-SUFFIX,umengcloud.com,REJECT
 DOMAIN-SUFFIX,voiceads.cn,REJECT
 DOMAIN-SUFFIX,xdrig.com,REJECT
@@ -91,7 +85,6 @@ DOMAIN,js.users.51.la,REJECT
 DOMAIN,static.jpush.cn,REJECT
 DOMAIN,sugar.zhihu.com,REJECT
 DOMAIN,track.58.com,REJECT
-
 // Baidu
 DOMAIN-SUFFIX,baidustatic.com,REJECT
 DOMAIN,hm.baidu.com,REJECT
@@ -99,14 +92,13 @@ DOMAIN,hmma.baidu.com,REJECT
 DOMAIN,mobads.baidu.com,REJECT
 DOMAIN,mobads-logs.baidu.com,REJECT
 DOMAIN,wn.pos.baidu.com,REJECT
-// - Baidu-High-ACC-IP
+// Baidu-High-ACC-IP
 DOMAIN,ps.map.baidu.com,REJECT
 DOMAIN,sv.map.baidu.com,REJECT
 DOMAIN,offnavi.map.baidu.com,REJECT
 DOMAIN,newvector.map.baidu.com,REJECT
 DOMAIN,ulog.imap.baidu.com,REJECT
 DOMAIN,newloc.map.n.shifen.com,REJECT
-
 // Ali
 DOMAIN,acs4baichuan.m.taobao.com,REJECT
 DOMAIN,adash-c.ut.taobao.com,REJECT
@@ -115,7 +107,6 @@ DOMAIN,adashbc.ut.taobao.com,REJECT
 DOMAIN,adash.man.aliyuncs.com,REJECT
 DOMAIN,apoll.m.taobao.com,REJECT
 DOMAIN,amdc.m.taobao.com,REJECT
-
 // Tencent
 DOMAIN-SUFFIX,e.qq.com,REJECT
 DOMAIN-SUFFIX,l.qq.com,REJECT
@@ -123,15 +114,12 @@ DOMAIN,pingma.qq.com,REJECT
 DOMAIN,mi.gdt.qq.com,REJECT
 DOMAIN,btrace.qq.com,REJECT
 DOMAIN,mtrace.qq.com,REJECT
-
 // 163
 DOMAIN-SUFFIX,analytics.126.net,REJECT
 DOMAIN,iadmat.nosdn.127.net,REJECT
 DOMAIN,static.ws.126.net,REJECT
-
 // AutoNavi
 DOMAIN,nbsdk-baichuan.alicdn.com,REJECT
-
 // iQiyi
 DOMAIN-SUFFIX,cupid.iqiyi.com,REJECT
 DOMAIN,ifacelog.iqiyi.com,REJECT
@@ -141,38 +129,30 @@ IP-CIDR,101.227.97.240/32,REJECT,no-resolve
 IP-CIDR,101.227.200.11/32,REJECT,no-resolve
 IP-CIDR,101.227.200.28/32,REJECT,no-resolve
 IP-CIDR,124.192.153.42/32,REJECT,no-resolve
-
 // Youku
 DOMAIN-SUFFIX,atm.youku.com,REJECT
 DOMAIN,ad.mobile.youku.com,REJECT
 DOMAIN,iyes.youku.com,REJECT
-
-// - SohuVideo
+// SohuVideo
 DOMAIN-SUFFIX,aty.sohu.com,REJECT
 DOMAIN,imp.optaim.com,REJECT
 DOMAIN,v2.reachmax.cn,REJECT
 DOMAIN,data.vod.itc.cn,REJECT
-
 // PPTV
 DOMAIN,asimgs.pplive.cn,REJECT
-
 // XiMaLaYa
 DOMAIN,ad.ximalaya.com,REJECT
-
 // Moji
 DOMAIN,ad.api.moji.com,REJECT
 DOMAIN,v1.log.moji.com,REJECT
-
 // Photoable
 DOMAIN,regist.fotoable.com,REJECT
 DOMAIN,cdn.adapi.fotoable.com,REJECT
 DOMAIN,adapi-analytics.fotoable.net,REJECT
-
 // UC
 DOMAIN,adtrack.ucweb.com,REJECT
 DOMAIN,applogios.uc.cn,REJECT
 DOMAIN,track.uc.cn,REJECT
-
 // Internet Service Provider Hijack
 DOMAIN-SUFFIX,17gouwuba.com,REJECT
 DOMAIN-SUFFIX,285680.com,REJECT
@@ -198,21 +178,6 @@ DOMAIN-SUFFIX,sg536.cn,REJECT
 DOMAIN-SUFFIX,topitme.com,REJECT
 DOMAIN-SUFFIX,tuipenguin.com,REJECT
 IP-CIDR,47.89.59.182/32,REJECT,no-resolve
-// - ChinaNet
-IP-CIDR,61.160.200.223/32,REJECT,no-resolve
-IP-CIDR,61.160.200.242/32,REJECT,no-resolve
-IP-CIDR,61.160.200.252/32,REJECT,no-resolve
-IP-CIDR,111.175.220.164/32,REJECT,no-resolve
-IP-CIDR,124.232.160.178/32,REJECT,no-resolve
-IP-CIDR,175.6.223.15/32,REJECT,no-resolve
-IP-CIDR,183.59.53.237/32,REJECT,no-resolve
-IP-CIDR,218.93.127.37/32,REJECT,no-resolve
-IP-CIDR,221.231.6.79/32,REJECT,no-resolve
-IP-CIDR,222.186.61.91/32,REJECT,no-resolve
-IP-CIDR,222.186.61.95/32,REJECT,no-resolve
-IP-CIDR,222.186.61.96/32,REJECT,no-resolve
-IP-CIDR,222.73.156.235/32,REJECT,no-resolve
-
 // Blacklist
 DOMAIN-SUFFIX,abbyychina.com,REJECT
 DOMAIN-SUFFIX,bartender.cc,REJECT
@@ -244,19 +209,15 @@ DOMAIN-SUFFIX,overturechina.com,REJECT
 DOMAIN-SUFFIX,vegaschina.cn,REJECT
 DOMAIN-SUFFIX,xmindchina.net,REJECT
 DOMAIN-SUFFIX,xshellcn.com,REJECT
-DOMAIN-SUFFIX,xshellcn.com,REJECT
 DOMAIN-SUFFIX,yuanchengxiezuo.com,REJECT
 DOMAIN-SUFFIX,zbrushcn.com,REJECT
-
-
-DOMAIN-SUFFIX,irs01.com,REJECT
 DOMAIN-SUFFIX,fc-feed.cdn.bcebos.com,REJECT
 DOMAIN-SUFFIX,zkres.myzaker.com,REJECT
 DOMAIN-SUFFIX,ggs.myzaker.com,REJECT
 DOMAIN-SUFFIX,t.h5data.com,REJECT
 DOMAIN-SUFFIX,oimageb4.ydstatic.com,REJECT
 DOMAIN-SUFFIX,appuse.ifjing.com,REJECT
-DOMAIN-SUFFIX,track-cn.felink.com,REJECT
+DOMAIN-KEYWORD,track,REJECT
 DOMAIN-SUFFIX,oimagec8.ydstatic.com,REJECT
 DOMAIN,csi.gstatic.com,REJECT
 DOMAIN,graph.facebook.com,REJECT
@@ -266,7 +227,6 @@ DOMAIN-SUFFIX,kingsoft-office-service.com,REJECT
 DOMAIN,tqtdata1.weathercn.com,REJECT
 DOMAIN,tqtdata.weathercn.com,REJECT
 DOMAIN-SUFFIX,mob.com,REJECT
-DOMAIN-SUFFIX,growingio.com,REJECT
 DOMAIN-SUFFIX,stats.mlinks.cc,REJECT
 DOMAIN-SUFFIX,sugar.zhihu.com,REJECT
 DOMAIN,badad.googleplex.com,REJECT
@@ -291,7 +251,6 @@ DOMAIN,s0.2mdn.net,REJECT
 DOMAIN,s1.2mdn.net,REJECT
 DOMAIN,adfarm.mediaplex.com,REJECT
 DOMAIN,secure.img-cdn.mediaplex.com,REJECT
-DOMAIN,badad.googleplex.com,REJECT
 DOMAIN,youtube.112.2o7.net,REJECT
 DOMAIN-SUFFIX,mr.da.netease.com,REJECT
 DOMAIN-SUFFIX,pr.da.netease.com,REJECT
@@ -331,9 +290,7 @@ DOMAIN-KEYWORD,adwords,REJECT
 DOMAIN-KEYWORD,allyes,REJECT
 DOMAIN-KEYWORD,analysis,REJECT
 DOMAIN-KEYWORD,analysys,REJECT
-DOMAIN-KEYWORD,analytics,REJECT
 DOMAIN-KEYWORD,applovin,REJECT
-DOMAIN-KEYWORD,cnzz,REJECT
 DOMAIN-KEYWORD,dnserror,REJECT
 DOMAIN-KEYWORD,domob,REJECT
 DOMAIN-KEYWORD,duomeng,REJECT
@@ -350,55 +307,51 @@ DOMAIN-KEYWORD,socdm,REJECT
 DOMAIN-KEYWORD,taboola,REJECT
 DOMAIN-KEYWORD,tanx,REJECT
 DOMAIN-KEYWORD,uedas,REJECT
-DOMAIN-KEYWORD,umeng,REJECT
 DOMAIN-KEYWORD,umtrack,REJECT
 DOMAIN-KEYWORD,usage,REJECT
 DOMAIN-KEYWORD,wlmonitor,REJECT
 DOMAIN-KEYWORD,zjtoolbar,REJECT
-
 //Google
 DOMAIN-SUFFIX,fonts.googleapis.com,DIRECT
 DOMAIN-SUFFIX,fonts.gstatic.com,DIRECT
-DOMAIN-SUFFIX,goo.gl,force-remote-dns
-DOMAIN-SUFFIX,gvt1.com,force-remote-dns
-DOMAIN-SUFFIX,youtu.be,force-remote-dns
-DOMAIN-SUFFIX,ytimg.com,force-remote-dns
-DOMAIN-SUFFIX,ggpht.com,force-remote-dns
-DOMAIN-KEYWORD,gmail,force-remote-dns
-DOMAIN-KEYWORD,google,force-remote-dns
-DOMAIN-KEYWORD,gstatic,force-remote-dns
-DOMAIN-KEYWORD,youtube,force-remote-dns
-
+DOMAIN-SUFFIX,goo.gl,PROXY,force-remote-dns
+DOMAIN-SUFFIX,gvt1.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,youtu.be,PROXY,force-remote-dns
+DOMAIN-SUFFIX,ytimg.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,ggpht.com,PROXY,force-remote-dns
+DOMAIN-KEYWORD,gmail,PROXY,force-remote-dns
+DOMAIN-KEYWORD,google,PROXY,force-remote-dns
+DOMAIN-KEYWORD,gstatic,PROXY,force-remote-dns
+DOMAIN-KEYWORD,youtube,PROXY,force-remote-dns
 //Apple
-
 DOMAIN,appleiphonecell.com,DIRECT
-USER-AGENT,AppStore*,DIRECT
-USER-AGENT,com.apple.appstored*,DIRECT
-USER-AGENT,cloudd*,DIRECT
-DOMAIN-KEYWORD,icloud,DIRECT
-DOMAIN-KEYWORD,itunes,DIRECT
-DOMAIN-SUFFIX,aaplimg.com,DIRECT
-DOMAIN-SUFFIX,apple.co,DIRECT
-DOMAIN-SUFFIX,appsto.re,DIRECT
-DOMAIN-SUFFIX,cdn-apple.com,DIRECT
-DOMAIN-SUFFIX,me.com,DIRECT
-DOMAIN-SUFFIX,mzstatic.com,DIRECT
+USER-AGENT,AppStore*,PROXY,force-remote-dns
+USER-AGENT,com.apple.appstored*,PROXY,force-remote-dns
+USER-AGENT,cloudd*,PROXY,force-remote-dns
+DOMAIN-KEYWORD,icloud,PROXY,force-remote-dns
+DOMAIN-KEYWORD,itunes,PROXY,force-remote-dns
+DOMAIN-SUFFIX,aaplimg.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,apple.co,PROXY,force-remote-dns
+DOMAIN-SUFFIX,appsto.re,PROXY,force-remote-dns
+DOMAIN-SUFFIX,cdn-apple.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,me.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,mzstatic.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,icloud.com,DIRECT
 DOMAIN-SUFFIX,icloud-content.com,DIRECT
 DOMAIN-SUFFIX,itunes.com,DIRECT
 DOMAIN-SUFFIX,itunes-apple.com.akadns.net,DIRECT
-IP-CIDR,17.0.0.0/8,DIRECT,no-resolve
-DOMAIN-SUFFIX,xp.apple.com,DIRECT
+IP-CIDR,17.0.0.0/8,PROXY,no-resolve
+DOMAIN-SUFFIX,xp.apple.com,PROXY,force-remote-dns
 USER-AGENT,com.apple.appstored*,DIRECT
 USER-AGENT,*com.apple.mobileme.fmip1,DIRECT
 USER-AGENT,*WeatherFoundation*,PROXY
 USER-AGENT,AssistantServices*,DIRECT
 USER-AGENT,MobileAsset*,DIRECT
-USER-AGENT,Siri*,DIRECT
-USER-AGENT,*siri*,DIRECT
+USER-AGENT,Siri*,PROXY,force-remote-dns
+USER-AGENT,*siri*,PROXY,force-remote-dns
 USER-AGENT,%E8%AE%BE%E7%BD%AE*,DIRECT
 DOMAIN,api.smoot.apple.com.cn,DIRECT
-DOMAIN-SUFFIX,apple.com,DIRECT
+DOMAIN-SUFFIX,apple.com,PROXY,force-remote-dns
 DOMAIN,cn-smp-paymentservices.apple.com,DIRECT
 DOMAIN,smp-device.apple.com,DIRECT
 DOMAIN,smp-device-content.apple.com,DIRECT
@@ -430,71 +383,68 @@ IP-CIDR,149.154.0.0/16,PROXY,no-resolve
 IP-CIDR,74.125.23.127/32,PROXY,no-resolve
 DOMAIN-SUFFIX,cdninstagram.com,PROXY
 DOMAIN-SUFFIX,disquscdn.com,PROXY
-DOMAIN-SUFFIX,bbc.com,PROXY,resolve-on-proxy
-DOMAIN-KEYWORD,github,PROXY,resolve-on-proxy
-DOMAIN-KEYWORD,wikipedia,PROXY,resolve-on-proxy
-DOMAIN-KEYWORD,amazon,PROXY,resolve-on-proxy
-DOMAIN-KEYWORD,appledaily,PROXY,resolve-on-proxy
-DOMAIN-KEYWORD,blogspot,PROXY,resolve-on-proxy
-DOMAIN-KEYWORD,fbcdn,PROXY,resolve-on-proxy
-DOMAIN-KEYWORD,facebook,PROXY,resolve-on-proxy
-DOMAIN-KEYWORD,instagram,PROXY,resolve-on-proxy
-DOMAIN-KEYWORD,twitter,PROXY,resolve-on-proxy
-DOMAIN-KEYWORD,twimg,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,feedly.com,PROXY
-DOMAIN-KEYWORD,appledaily,PROXY,resolve-on-proxy
-DOMAIN-KEYWORD,beetalk,PROXY,resolve-on-proxy
-DOMAIN-KEYWORD,blogspot,PROXY,resolve-on-proxy
-DOMAIN-KEYWORD,dropbox,PROXY,resolve-on-proxy
-DOMAIN-KEYWORD,telegram,PROXY,resolve-on-proxy
-DOMAIN-KEYWORD,whatsapp,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,1e100.net,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,2mdn.net,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,abc.xyz,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,akamai.net,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,appspot.com,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,autodraw.com,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,blogblog.com,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,chromeexperiments.com,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,creativelab5.com,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,crittercism.com,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,culturalspot.org,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,dartlang.org,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,fb.com,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,fb.me,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,fbcdn.net,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,fbsbx.com,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,gcr.io,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,gosetsuden.jp,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,gvt1.com,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,gwtproject.org,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,heroku.com,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,html5rocks.com,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,humblebundle.com,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,keyhole.com,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,kobo.com,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,kobobooks.com,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,madewithcode.com,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,material.io,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,messenger.com,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,netmarble.com,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,nianticlabs.com,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,pinimg.com,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,pixiv.net,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,pubnub.com,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,t.co,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,tensorflow.org,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,thefacebook.com,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,toggleable.com,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,torproject.org,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,twitpic.com,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,unfiltered.news,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,waveprotocol.org,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,webmproject.org,PROXY,resolve-on-proxy
-DOMAIN-SUFFIX,webrtc.org,PROXY,resolve-on-proxy
-USER-AGENT,*Telegram*,PROXY,resolve-on-proxy
-USER-AGENT,Instagram*,PROXY,resolve-on-proxy
-USER-AGENT,*YouTube*,PROXY,resolve-on-proxy
+DOMAIN-SUFFIX,bbc.com,PROXY,force-remote-dns
+DOMAIN-KEYWORD,github,PROXY,force-remote-dns
+DOMAIN-KEYWORD,wikipedia,PROXY,force-remote-dns
+DOMAIN-KEYWORD,amazon,PROXY,force-remote-dns
+DOMAIN-KEYWORD,appledaily,PROXY,force-remote-dns
+DOMAIN-KEYWORD,blogspot,PROXY,force-remote-dns
+DOMAIN-KEYWORD,fbcdn,PROXY,force-remote-dns
+DOMAIN-KEYWORD,facebook,PROXY,force-remote-dns
+DOMAIN-KEYWORD,instagram,PROXY,force-remote-dns
+DOMAIN-KEYWORD,twitter,PROXY,force-remote-dns
+DOMAIN-KEYWORD,twimg,PROXY,force-remote-dns
+DOMAIN-SUFFIX,feedly.com,PROXY,force-remote-dns
+DOMAIN-KEYWORD,beetalk,PROXY,force-remote-dns
+DOMAIN-KEYWORD,dropbox,PROXY,force-remote-dns
+DOMAIN-KEYWORD,telegram,PROXY,force-remote-dns
+DOMAIN-KEYWORD,whatsapp,PROXY,force-remote-dns
+DOMAIN-SUFFIX,1e100.net,PROXY,force-remote-dns
+DOMAIN-SUFFIX,2mdn.net,PROXY,force-remote-dns
+DOMAIN-SUFFIX,abc.xyz,PROXY,force-remote-dns
+DOMAIN-SUFFIX,akamai.net,PROXY,force-remote-dns
+DOMAIN-SUFFIX,appspot.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,autodraw.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,blogblog.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,chromeexperiments.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,creativelab5.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,crittercism.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,culturalspot.org,PROXY,force-remote-dns
+DOMAIN-SUFFIX,dartlang.org,PROXY,force-remote-dns
+DOMAIN-SUFFIX,fb.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,fb.me,PROXY,force-remote-dns
+DOMAIN-SUFFIX,fbcdn.net,PROXY,force-remote-dns
+DOMAIN-SUFFIX,fbsbx.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,gcr.io,PROXY,force-remote-dns
+DOMAIN-SUFFIX,gosetsuden.jp,PROXY,force-remote-dns
+DOMAIN-SUFFIX,gwtproject.org,PROXY,force-remote-dns
+DOMAIN-SUFFIX,heroku.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,html5rocks.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,humblebundle.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,keyhole.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,kobo.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,kobobooks.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,madewithcode.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,material.io,PROXY,force-remote-dns
+DOMAIN-SUFFIX,messenger.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,netmarble.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,nianticlabs.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,pinimg.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,pixiv.net,PROXY,force-remote-dns
+DOMAIN-SUFFIX,pubnub.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,t.co,PROXY,force-remote-dns
+DOMAIN-SUFFIX,tensorflow.org,PROXY,force-remote-dns
+DOMAIN-SUFFIX,thefacebook.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,toggleable.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,torproject.org,PROXY,force-remote-dns
+DOMAIN-SUFFIX,twitpic.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,unfiltered.news,PROXY,force-remote-dns
+DOMAIN-SUFFIX,waveprotocol.org,PROXY,force-remote-dns
+DOMAIN-SUFFIX,webmproject.org,PROXY,force-remote-dns
+DOMAIN-SUFFIX,webrtc.org,PROXY,force-remote-dns
+USER-AGENT,*Telegram*,PROXY,force-remote-dns
+USER-AGENT,Instagram*,PROXY,force-remote-dns
+USER-AGENT,*YouTube*,PROXY,force-remote-dns
 USER-AGENT,%E5%8D%B3%E5%88%BB*,DIRECT
 USER-AGENT,*Vainglory*,DIRECT
 USER-AGENT,arrowio*,DIRECT
@@ -508,7 +458,6 @@ USER-AGENT,QQ*,DIRECT
 USER-AGENT,TeamViewer*,DIRECT
 USER-AGENT,TIM*,DIRECT
 USER-AGENT,WeChat*,DIRECT
-
 DOMAIN-SUFFIX,12306.com,DIRECT
 DOMAIN-SUFFIX,126.net,DIRECT
 DOMAIN-SUFFIX,163.com,DIRECT
@@ -611,31 +560,25 @@ DOMAIN-SUFFIX,tmall.com,DIRECT
 DOMAIN-SUFFIX,weather.com,DIRECT
 DOMAIN-SUFFIX,weibo.com,DIRECT
 DOMAIN-SUFFIX,xmcdn.com,DIRECT
-DOMAIN-SUFFIX,xunlei.com,DIREC
+DOMAIN-SUFFIX,xunlei.com,DIRECT
 DOMAIN-SUFFIX,youdao.com,DIRECT
 DOMAIN-SUFFIX,youku.com,DIRECT
 DOMAIN-SUFFIX,zhihu.com,DIRECT
 DOMAIN-SUFFIX,zimuzu.tv,DIRECT
 DOMAIN-SUFFIX,cn,DIRECT
 DOMAIN-SUFFIX,local,DIRECT
-IP-CIDR,10.0.0.0/8,DIRECT,no-resolve
-IP-CIDR,100.64.0.0/10,DIRECT,no-resolve
-IP-CIDR,127.0.0.0/8,DIRECT,no-resolve
-IP-CIDR,172.0.0.0/12,DIRECT,no-resolve
-IP-CIDR,192.168.0.0/16,DIRECT,no-resolve
+IP-CIDR,10.0.0.0/8,DIRECT
+IP-CIDR,100.64.0.0/10,DIRECT
+IP-CIDR,127.0.0.0/8,DIRECT
+IP-CIDR,172.0.0.0/12,DIRECT
+IP-CIDR,192.168.0.0/16,DIRECT
 GEOIP,CN,DIRECT
 GEOIP,US,PROXY
 GEOIP,HK,PROXY
 FINAL,PROXY
-
 [Host]
-
 [URL Rewrite]
 ^https?://(www.)?g.cn https://www.google.com 302
 ^https?://(www.)?google.cn https://www.google.com 302
-
-
 [Header Rewrite]
-
-
 [SSID Setting]
