--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -11,21 +11,8 @@
 [URL-REJECTION]
 [TCP]
 //me
-HOST-SUFFIX,lxysh.top,DIRECT
-HOST-SUFFIX,duckduckgo.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,dorcelclub.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,bit.ly,PROXY,resolve-on-proxy
-HOST-SUFFIX,yt3.ggpht.com,PROXY,resolve-on-proxy
-HOST-KEYWORD,speedtest,PROXY,resolve-on-proxy
-HOST-SUFFIX,sis001.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,18board.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,udn.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,javlibrary.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,lxysh.co,DIRECT
 HOST-SUFFIX,v2ex.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,tumblr.com,PROXY,resolve-on-proxy
-HOST-KEYWORD,rarbg,PROXY,resolve-on-proxy
-HOST-SUFFIX,cordcloud.me,PROXY,resolve-on-proxy
-HOST-SUFFIX,playno1.com,PROXY,resolve-on-proxy
 HOST-SUFFIX,flurry.com,REJECT
 HOST-SUFFIX,lnk0.com,REJECT
 // Apple
@@ -53,29 +40,10 @@ HOST,lookup-api.apple.com,🍎 Only
 HOST,api-glb-sea.smoot.apple.com,🍎 Only
 HOST,books.itunes.apple.com,🍎 Only
 HOST,hls.itunes.apple.com,🍎 Only
-IP-CIDR,17.0.0.0/8,🍎 Only,no-resolve
+IP-CIDR,17.0.0.0/8,🍎 Only
 HOST-SUFFIX,push-apple.com.akadns.net,DIRECT
-USER-AGENT,%E5%9C%B0%E5%9B%BE*,DIRECT // Maps
-USER-AGENT,com.apple.Maps,DIRECT
-USER-AGENT,FindMyFriends*,DIRECT
-USER-AGENT,FindMyiPhone*,DIRECT
-USER-AGENT,FMDClient*,DIRECT
-USER-AGENT,FMFD*,DIRECT
-USER-AGENT,fmflocatord*,DIRECT
-USER-AGENT,geod*,DIRECT
-USER-AGENT,locationd*,DIRECT
-USER-AGENT,Maps*,DIRECT
 HOST,gspe1-ssl.ls.apple.com,DIRECT
 HOST,audid-api.taobao.com,REJECT
-HOST-SUFFIX,lxysh.co,DIRECT
-HOST-SUFFIX,duckduckgo.com,PROXY
-HOST-SUFFIX,dorcelclub.com,PROXY
-HOST-SUFFIX,bit.ly,PROXY
-HOST-KEYWORD,speedtest,PROXY
-HOST-SUFFIX,sis001.com,PROXY
-HOST-SUFFIX,18board.com,PROXY
-HOST-SUFFIX,v2ex.com,PROXY
-HOST-SUFFIX,playno1.com,PROXY
 //REJECT
 // Advertisement-and-Tracking-Protections
 HOST-SUFFIX,adinall.com,REJECT
@@ -368,84 +336,11 @@ HOST-KEYWORD,zjtoolbar,REJECT
 //Google
 HOST-SUFFIX,fonts.googleapis.com,DIRECT
 HOST-SUFFIX,fonts.gstatic.com,DIRECT
-HOST-SUFFIX,goo.gl,PROXY,resolve-on-proxy
-HOST-SUFFIX,gvt1.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,youtu.be,PROXY,resolve-on-proxy
-HOST-SUFFIX,ytimg.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,ggpht.com,PROXY,resolve-on-proxy
-HOST-KEYWORD,gmail,PROXY,resolve-on-proxy
-HOST-KEYWORD,google,PROXY,resolve-on-proxy
-HOST-KEYWORD,gstatic,PROXY,resolve-on-proxy
-HOST-KEYWORD,youtube,PROXY,resolve-on-proxy
 IP-CIDR,67.198.55.0/24,PROXY,no-resolve
 IP-CIDR,91.108.0.0/16,PROXY,no-resolve
 IP-CIDR,109.239.140.0/24,PROXY,no-resolve
 IP-CIDR,149.154.0.0/16,PROXY,no-resolve
 IP-CIDR,74.125.23.127/32,PROXY,no-resolve
-HOST-SUFFIX,cdninstagram.com,PROXY
-HOST-SUFFIX,disquscdn.com,PROXY
-HOST-SUFFIX,bbc.com,PROXY,resolve-on-proxy
-HOST-KEYWORD,github,PROXY,resolve-on-proxy
-HOST-KEYWORD,wikipedia,PROXY,resolve-on-proxy
-HOST-KEYWORD,amazon,PROXY,resolve-on-proxy
-HOST-KEYWORD,appledaily,PROXY,resolve-on-proxy
-HOST-KEYWORD,blogspot,PROXY,resolve-on-proxy
-HOST-KEYWORD,fbcdn,PROXY,resolve-on-proxy
-HOST-KEYWORD,facebook,PROXY,resolve-on-proxy
-HOST-KEYWORD,instagram,PROXY,resolve-on-proxy
-HOST-KEYWORD,twitter,PROXY,resolve-on-proxy
-HOST-KEYWORD,twimg,PROXY,resolve-on-proxy
-HOST-SUFFIX,feedly.com,PROXY,resolve-on-proxy
-HOST-KEYWORD,beetalk,PROXY,resolve-on-proxy
-HOST-KEYWORD,dropbox,PROXY,resolve-on-proxy
-HOST-KEYWORD,telegram,PROXY,resolve-on-proxy
-HOST-KEYWORD,whatsapp,PROXY,resolve-on-proxy
-HOST-SUFFIX,1e100.net,PROXY,resolve-on-proxy
-HOST-SUFFIX,2mdn.net,PROXY,resolve-on-proxy
-HOST-SUFFIX,abc.xyz,PROXY,resolve-on-proxy
-HOST-SUFFIX,akamai.net,PROXY,resolve-on-proxy
-HOST-SUFFIX,appspot.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,autodraw.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,blogblog.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,chromeexperiments.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,creativelab5.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,crittercism.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,culturalspot.org,PROXY,resolve-on-proxy
-HOST-SUFFIX,dartlang.org,PROXY,resolve-on-proxy
-HOST-SUFFIX,fb.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,fb.me,PROXY,resolve-on-proxy
-HOST-SUFFIX,fbcdn.net,PROXY,resolve-on-proxy
-HOST-SUFFIX,fbsbx.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,gcr.io,PROXY,resolve-on-proxy
-HOST-SUFFIX,gosetsuden.jp,PROXY,resolve-on-proxy
-HOST-SUFFIX,gwtproject.org,PROXY,resolve-on-proxy
-HOST-SUFFIX,heroku.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,html5rocks.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,humblebundle.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,keyhole.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,kobo.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,kobobooks.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,madewithcode.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,material.io,PROXY,resolve-on-proxy
-HOST-SUFFIX,messenger.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,netmarble.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,nianticlabs.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,pinimg.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,pixiv.net,PROXY,resolve-on-proxy
-HOST-SUFFIX,pubnub.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,t.co,PROXY,resolve-on-proxy
-HOST-SUFFIX,tensorflow.org,PROXY,resolve-on-proxy
-HOST-SUFFIX,thefacebook.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,toggleable.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,torproject.org,PROXY,resolve-on-proxy
-HOST-SUFFIX,twitpic.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,unfiltered.news,PROXY,resolve-on-proxy
-HOST-SUFFIX,waveprotocol.org,PROXY,resolve-on-proxy
-HOST-SUFFIX,webmproject.org,PROXY,resolve-on-proxy
-HOST-SUFFIX,webrtc.org,PROXY,resolve-on-proxy
-USER-AGENT,*Telegram*,PROXY,resolve-on-proxy
-USER-AGENT,Instagram*,PROXY,resolve-on-proxy
-USER-AGENT,*YouTube*,PROXY,resolve-on-proxy
 USER-AGENT,%E5%8D%B3%E5%88%BB*,DIRECT
 USER-AGENT,*Vainglory*,DIRECT
 USER-AGENT,arrowio*,DIRECT
@@ -574,8 +469,6 @@ IP-CIDR,127.0.0.0/8,DIRECT
 IP-CIDR,172.0.0.0/12,DIRECT
 IP-CIDR,192.168.0.0/16,DIRECT
 GEOIP,CN,DIRECT
-GEOIP,US,PROXY
-GEOIP,HK,PROXY
 FINAL,PROXY
 [HOST-SUFFIX]
 [SSID Setting]
