--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -1,25 +1,15 @@
 [General]
 bypass-system = true
-dns-server = 119.29.29.29,1.0.0.1,223.5.5.5
-skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,17.0.0.0/8,localhost,*.local
+dns-server = system,119.29.29.29,1.0.0.1,223.5.5.5
+skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,17.0.0.0/8,localhost,*.local,*.crashlytics.com
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
 [Rule]
 //me
-DOMAIN-SUFFIX,lxysh.top,DIRECT
-DOMAIN-SUFFIX,duckduckgo.com,PROXY
-DOMAIN-SUFFIX,dorcelclub.com,PROXY
-DOMAIN-SUFFIX,bit.ly,PROXY
-DOMAIN-SUFFIX,yt3.ggpht.com,PROXY,force-remote-dns
-DOMAIN-KEYWORD,speedtest,PROXY
-DOMAIN-SUFFIX,sis001.com,PROXY
-DOMAIN-SUFFIX,18board.com,PROXY
-DOMAIN-SUFFIX,udn.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,javlibrary.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,喵帕斯.com,PROXY
+DOMAIN-SUFFIX,lxysh.co,DIRECT
 DOMAIN-SUFFIX,v2ex.com,PROXY
-DOMAIN-SUFFIX,tumblr.com,PROXY,force-remote-dns
 DOMAIN-KEYWORD,rarbg,PROXY,force-remote-dns
 DOMAIN-SUFFIX,cordcloud.me,PROXY,force-remote-dns
-DOMAIN-SUFFIX,playno1.com,PROXY
 DOMAIN-SUFFIX,flurry.com,REJECT
 DOMAIN-SUFFIX,lnk0.com,REJECT
 //REJECT
@@ -325,30 +315,30 @@ DOMAIN-KEYWORD,gstatic,PROXY,force-remote-dns
 DOMAIN-KEYWORD,youtube,PROXY,force-remote-dns
 //Apple
 DOMAIN,appleiphonecell.com,DIRECT
-USER-AGENT,AppStore*,PROXY,force-remote-dns
-USER-AGENT,com.apple.appstored*,PROXY,force-remote-dns
-USER-AGENT,cloudd*,PROXY,force-remote-dns
-DOMAIN-KEYWORD,icloud,PROXY,force-remote-dns
-DOMAIN-KEYWORD,itunes,PROXY,force-remote-dns
-DOMAIN-SUFFIX,aaplimg.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,apple.co,PROXY,force-remote-dns
-DOMAIN-SUFFIX,appsto.re,PROXY,force-remote-dns
-DOMAIN-SUFFIX,cdn-apple.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,me.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,mzstatic.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,icloud.com,DIRECT
-DOMAIN-SUFFIX,icloud-content.com,DIRECT
-DOMAIN-SUFFIX,itunes.com,DIRECT
+USER-AGENT,AppStore*,PROXY
+USER-AGENT,com.apple.appstored*,PROXY
+USER-AGENT,cloudd*,PROXY
+DOMAIN-KEYWORD,icloud,PROXY
+DOMAIN-KEYWORD,itunes,PROXY
+DOMAIN-SUFFIX,aaplimg.com
+DOMAIN-SUFFIX,apple.co,PROXY
+DOMAIN-SUFFIX,appsto.re,PROXY
+DOMAIN-SUFFIX,cdn-apple.com
+DOMAIN-SUFFIX,me.com,PROXY
+DOMAIN-SUFFIX,mzstatic.com,PROXY
+DOMAIN-SUFFIX,icloud.com,PROXY
+DOMAIN-SUFFIX,icloud-content.com,PROXY
+DOMAIN-SUFFIX,itunes.com,PROXY
 DOMAIN-SUFFIX,itunes-apple.com.akadns.net,DIRECT
-IP-CIDR,17.0.0.0/8,PROXY,no-resolve
-DOMAIN-SUFFIX,xp.apple.com,PROXY,force-remote-dns
-USER-AGENT,com.apple.appstored*,DIRECT
-USER-AGENT,*com.apple.mobileme.fmip1,DIRECT
+IP-CIDR,17.0.0.0/8,PROXY
+DOMAIN-SUFFIX,xp.apple.com,PROXY
+USER-AGENT,com.apple.appstored*,PROXY
+USER-AGENT,*com.apple.mobileme.fmip1,PROXY
 USER-AGENT,*WeatherFoundation*,PROXY
-USER-AGENT,AssistantServices*,DIRECT
-USER-AGENT,MobileAsset*,DIRECT
-USER-AGENT,Siri*,PROXY,force-remote-dns
-USER-AGENT,*siri*,PROXY,force-remote-dns
+USER-AGENT,AssistantServices*,PROXY
+USER-AGENT,MobileAsset*,PROXYT
+USER-AGENT,Siri*,PROXY
+USER-AGENT,*siri*,PROXY
 USER-AGENT,%E8%AE%BE%E7%BD%AE*,DIRECT
 DOMAIN,api.smoot.apple.com.cn,DIRECT
 DOMAIN-SUFFIX,apple.com,PROXY,force-remote-dns
@@ -360,91 +350,12 @@ DOMAIN-SUFFIX,push.apple.com,DIRECT
 DOMAIN-SUFFIX,gs-loc.apple.com,DIRECT
 DOMAIN-SUFFIX,ls.apple.com,DIRECT
 DOMAIN-SUFFIX,push-apple.com.akadns.net,DIRECT
-USER-AGENT,*Passbook*,DIRECT
-USER-AGENT,passd*,DIRECT
-USER-AGENT,seld*,DIRECT
-USER-AGENT,trustd*,DIRECT
-USER-AGENT,Wallet*,DIRECT
-USER-AGENT,com.apple.geod*,DIRECT
-USER-AGENT,com.apple.Maps,DIRECT
-USER-AGENT,FindMyFriends*,DIRECT
-USER-AGENT,FindMyiPhone*,DIRECT
-USER-AGENT,FMDClient*,DIRECT
-USER-AGENT,FMFD*,DIRECT
-USER-AGENT,fmflocatord*,DIRECT
-USER-AGENT,geod*,DIRECT
-USER-AGENT,locationd*,DIRECT
-USER-AGENT,Maps*,DIRECT
 USER-AGENT,%E5%9C%B0%E5%9B%BE*,DIRECT
 IP-CIDR,67.198.55.0/24,PROXY,no-resolve
 IP-CIDR,91.108.0.0/16,PROXY,no-resolve
 IP-CIDR,109.239.140.0/24,PROXY,no-resolve
 IP-CIDR,149.154.0.0/16,PROXY,no-resolve
 IP-CIDR,74.125.23.127/32,PROXY,no-resolve
-DOMAIN-SUFFIX,cdninstagram.com,PROXY
-DOMAIN-SUFFIX,disquscdn.com,PROXY
-DOMAIN-SUFFIX,bbc.com,PROXY,force-remote-dns
-DOMAIN-KEYWORD,github,PROXY,force-remote-dns
-DOMAIN-KEYWORD,wikipedia,PROXY,force-remote-dns
-DOMAIN-KEYWORD,amazon,PROXY,force-remote-dns
-DOMAIN-KEYWORD,appledaily,PROXY,force-remote-dns
-DOMAIN-KEYWORD,blogspot,PROXY,force-remote-dns
-DOMAIN-KEYWORD,fbcdn,PROXY,force-remote-dns
-DOMAIN-KEYWORD,facebook,PROXY,force-remote-dns
-DOMAIN-KEYWORD,instagram,PROXY,force-remote-dns
-DOMAIN-KEYWORD,twitter,PROXY,force-remote-dns
-DOMAIN-KEYWORD,twimg,PROXY,force-remote-dns
-DOMAIN-SUFFIX,feedly.com,PROXY,force-remote-dns
-DOMAIN-KEYWORD,beetalk,PROXY,force-remote-dns
-DOMAIN-KEYWORD,dropbox,PROXY,force-remote-dns
-DOMAIN-KEYWORD,telegram,PROXY,force-remote-dns
-DOMAIN-KEYWORD,whatsapp,PROXY,force-remote-dns
-DOMAIN-SUFFIX,1e100.net,PROXY,force-remote-dns
-DOMAIN-SUFFIX,2mdn.net,PROXY,force-remote-dns
-DOMAIN-SUFFIX,abc.xyz,PROXY,force-remote-dns
-DOMAIN-SUFFIX,akamai.net,PROXY,force-remote-dns
-DOMAIN-SUFFIX,appspot.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,autodraw.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,blogblog.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,chromeexperiments.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,creativelab5.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,crittercism.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,culturalspot.org,PROXY,force-remote-dns
-DOMAIN-SUFFIX,dartlang.org,PROXY,force-remote-dns
-DOMAIN-SUFFIX,fb.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,fb.me,PROXY,force-remote-dns
-DOMAIN-SUFFIX,fbcdn.net,PROXY,force-remote-dns
-DOMAIN-SUFFIX,fbsbx.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,gcr.io,PROXY,force-remote-dns
-DOMAIN-SUFFIX,gosetsuden.jp,PROXY,force-remote-dns
-DOMAIN-SUFFIX,gwtproject.org,PROXY,force-remote-dns
-DOMAIN-SUFFIX,heroku.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,html5rocks.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,humblebundle.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,keyhole.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,kobo.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,kobobooks.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,madewithcode.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,material.io,PROXY,force-remote-dns
-DOMAIN-SUFFIX,messenger.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,netmarble.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,nianticlabs.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,pinimg.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,pixiv.net,PROXY,force-remote-dns
-DOMAIN-SUFFIX,pubnub.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,t.co,PROXY,force-remote-dns
-DOMAIN-SUFFIX,tensorflow.org,PROXY,force-remote-dns
-DOMAIN-SUFFIX,thefacebook.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,toggleable.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,torproject.org,PROXY,force-remote-dns
-DOMAIN-SUFFIX,twitpic.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,unfiltered.news,PROXY,force-remote-dns
-DOMAIN-SUFFIX,waveprotocol.org,PROXY,force-remote-dns
-DOMAIN-SUFFIX,webmproject.org,PROXY,force-remote-dns
-DOMAIN-SUFFIX,webrtc.org,PROXY,force-remote-dns
-USER-AGENT,*Telegram*,PROXY,force-remote-dns
-USER-AGENT,Instagram*,PROXY,force-remote-dns
-USER-AGENT,*YouTube*,PROXY,force-remote-dns
 USER-AGENT,%E5%8D%B3%E5%88%BB*,DIRECT
 USER-AGENT,*Vainglory*,DIRECT
 USER-AGENT,arrowio*,DIRECT
@@ -573,8 +484,6 @@ IP-CIDR,127.0.0.0/8,DIRECT
 IP-CIDR,172.0.0.0/12,DIRECT
 IP-CIDR,192.168.0.0/16,DIRECT
 GEOIP,CN,DIRECT
-GEOIP,US,PROXY
-GEOIP,HK,PROXY
 FINAL,PROXY
 [Host]
 [URL Rewrite]
