--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -4,16 +4,107 @@ dns-server = system,119.29.29.29,1.0.0.1,223.5.5.5
 skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,17.0.0.0/8,localhost,*.local,*.crashlytics.com
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
 [Rule]
-//me
-DOMAIN-SUFFIX,喵帕斯.com,PROXY
-DOMAIN-SUFFIX,lxysh.co,DIRECT
-DOMAIN-SUFFIX,v2ex.com,PROXY
-DOMAIN-KEYWORD,rarbg,PROXY,force-remote-dns
-DOMAIN-SUFFIX,cordcloud.me,PROXY,force-remote-dns
+
+DOMAIN-SUFFIX,sub.ssr.sx,PROXY
+DOMAIN-SUFFIX,ssr.ac,PROXY
+DOMAIN-KEYWORD,google,PROXY,force-remote-dns
+DOMAIN-SUFFIX,v2ex.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,btrace.qq.com,REJECT
+DOMAIN-SUFFIX,e.qq.com,REJECT
+DOMAIN-SUFFIX,l.qq.com,REJECT
+DOMAIN-SUFFIX,mi.gdt.qq.com,REJECT
+DOMAIN-SUFFIX,mtrace.qq.com,REJECT
+DOMAIN-SUFFIX,pingma.qq.com,REJECT
+DOMAIN-SUFFIX,googletagservices.com,REJECT
+DOMAIN,www.gstatic.com,REJECT
+IP-CIDR,198.11.189.2/32,DIRECT,no-resolve
+DOMAIN-SUFFIX,31.media.tumblr.com,REJECT
+DOMAIN-SUFFIX,92x.tumblr.com,REJECT
+DOMAIN-SUFFIX,its-dori.tumblr.com,REJECT
+DOMAIN-SUFFIX,tumblrprobes.cedexis.com,REJECT
+DOMAIN-SUFFIX,tumblrreports.cedexis.com,REJECT
+DOMAIN-SUFFIX,p.twitter.com,REJECT
+DOMAIN-SUFFIX,scribe.twitter.com,REJECT
+DOMAIN-SUFFIX,syndication.twitter.com,REJECT
+DOMAIN-SUFFIX,syndication-o.twitter.com,REJECT
+DOMAIN-SUFFIX,urls.api.twitter.com,REJECT
+DOMAIN-SUFFIX,btrace.qq.com,REJECT
+DOMAIN-SUFFIX,e.qq.com,REJECT
+DOMAIN-SUFFIX,l.qq.com,REJECT
+DOMAIN-SUFFIX,mi.gdt.qq.com,REJECT
+DOMAIN-SUFFIX,mtrace.qq.com,REJECT
+DOMAIN-SUFFIX,pingma.qq.com,REJECT
+DOMAIN-SUFFIX,acs4baichuan.m.taobao.com,REJECT
+DOMAIN-SUFFIX,adash.man.aliyuncs.com,REJECT
+DOMAIN-SUFFIX,adashbc.ut.taobao.com,REJECT
+DOMAIN-SUFFIX,adash-c.ut.taobao.com,REJECT
+DOMAIN-SUFFIX,adashxgc.ut.taobao.com,REJECT
+DOMAIN-SUFFIX,amdc.m.taobao.com,REJECT
+DOMAIN-SUFFIX,apoll.m.taobao.com,REJECT
+DOMAIN-SUFFIX,nbsdk-baichuan.alicdn.com,REJECT
+DOMAIN-SUFFIX,c-nfa.jd.com,REJECT
+DOMAIN-SUFFIX,cps.360buy.com,REJECT
+DOMAIN-SUFFIX,jzt.jd.com,REJECT
+DOMAIN-SUFFIX,stat.m.jd.com,REJECT
+DOMAIN-SUFFIX,img-x.jd.com,REJECT
+DOMAIN,aoscdn.amap.com,REJECT
+DOMAIN,page.amap.com,REJECT
+DOMAIN,sync.amap.com,REJECT
+DOMAIN,mps.amap.com,REJECT
+DOMAIN,aos-cdn-image.amap.com,REJECT
+DOMAIN,wb.amap.com,REJECT
+DOMAIN,f.amap.com,REJECT
+DOMAIN,free-store.is.autonavi.com,REJECT
+DOMAIN,oss.amap.com,REJECT
+DOMAIN,store.is.autonavi.com,REJECT
+DOMAIN,sns.amap.com,REJECT
+DOMAIN,umdc.aliapp.org,REJECT
+DOMAIN-SUFFIX,manhuagui.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,bit.ly,PROXY,force-remote-dns
+DOMAIN,iconfactory.com,REJECT
+DOMAIN-SUFFIX,ehg-youtube.hitbox.com,REJECT
+DOMAIN-SUFFIX,nicorette.co.kr,REJECT
+DOMAIN-SUFFIX,youtube.112.2o7.net,REJECT
+DOMAIN-SUFFIX,ift.tt,PROXY,force-remote-dns
+DOMAIN-SUFFIX,btshoufa.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,github.com,PROXY,force-remote-dns
+IP-CIDR,8.8.8.8/32,PROXY,no-resolve
+DOMAIN-SUFFIX,live.com,PROXY
+DOMAIN-SUFFIX,sharepoint.com,PROXY
+USER-AGENT,Microsoft Office*,PROXY
+DOMAIN-SUFFIX,hotmail.com,PROXY
+DOMAIN,ogma.iad.appboy.com,REJECT
+DOMAIN-SUFFIX,microsoft.com,PROXY
+DOMAIN-SUFFIX,hockeyapp.net,REJECT
 DOMAIN-SUFFIX,flurry.com,REJECT
 DOMAIN-SUFFIX,lnk0.com,REJECT
-//REJECT
-// Advertisement-and-Tracking-Protections
+USER-AGENT,%E8%AE%BE%E7%BD%AE*,PROXY
+USER-AGENT,*com.apple.mobileme.fmip1,PROXY
+USER-AGENT,*WeatherFoundation*,PROXY
+USER-AGENT,AssistantServices*,PROXY
+USER-AGENT,MobileAsset*,PROXY
+USER-AGENT,Siri*,PROXY
+USER-AGENT,cloudd*,PROXY
+USER-AGENT,com.apple.appstored*,PROXY
+USER-AGENT,com.apple.geod*,PROXY
+DOMAIN-SUFFIX,aaplimg.com,PROXY
+DOMAIN-SUFFIX,apple.co,PROXY
+DOMAIN-SUFFIX,apple.com,PROXY
+DOMAIN-SUFFIX,icloud.com,PROXY
+DOMAIN-SUFFIX,icloud-content.com,PROXY
+DOMAIN-SUFFIX,itunes.com,PROXY
+DOMAIN-SUFFIX,me.com,PROXY
+DOMAIN-SUFFIX,mzstatic.com,PROXY
+DOMAIN-SUFFIX,appsto.re,PROXY
+DOMAIN,itunes.apple.com,PROXY
+DOMAIN,hls.itunes.apple.com,PROXY
+IP-CIDR,17.0.0.0/8,PROXY,no-resolve
+DOMAIN-SUFFIX,push-apple.com.akadns.net,DIRECT
+USER-AGENT,%E5%9C%B0%E5%9B%BE*,DIRECT
+DOMAIN,audid-api.taobao.com,REJECT
+DOMAIN-SUFFIX,lxysh.co,DIRECT
+DOMAIN-KEYWORD,speedtest,PROXY
+DOMAIN-SUFFIX,v2ex.com,PROXY
 DOMAIN-SUFFIX,adinall.com,REJECT
 DOMAIN-SUFFIX,adjust.com,REJECT
 DOMAIN-SUFFIX,adlefee.com,REJECT
@@ -21,16 +112,13 @@ DOMAIN-SUFFIX,admaster.com.cn,REJECT
 DOMAIN-SUFFIX,adview.cn,REJECT
 DOMAIN-SUFFIX,aerserv.com,REJECT
 DOMAIN-SUFFIX,alipaylog.com,REJECT
-DOMAIN-SUFFIX,amazon-adsystem.com,REJECT
 DOMAIN-SUFFIX,appadhoc.com,REJECT
 DOMAIN-SUFFIX,appsflyer.com,REJECT
 DOMAIN-KEYWORD,cnzz,REJECT
 DOMAIN-SUFFIX,cocounion.com,REJECT
 DOMAIN-SUFFIX,crwdcntrl.net,REJECT
 DOMAIN-SUFFIX,ctrmi.com,REJECT
-DOMAIN-SUFFIX,doubleclick.net,REJECT
-DOMAIN-SUFFIX,googleadservices.com,REJECT
-DOMAIN-SUFFIX,googleadsserving.cn,REJECT
+DOMAIN-KEYWORD,doubleclick,REJECT
 DOMAIN-KEYWORD,analytics,REJECT
 DOMAIN-SUFFIX,googlesyndication.com,REJECT
 DOMAIN-SUFFIX,growingio.com,REJECT
@@ -39,7 +127,6 @@ DOMAIN-SUFFIX,inmobi.com,REJECT
 DOMAIN-SUFFIX,irs01.com,REJECT
 DOMAIN-SUFFIX,kejet.net,REJECT
 DOMAIN-SUFFIX,miaozhen.com,REJECT
-DOMAIN-SUFFIX,moatads.com,REJECT
 DOMAIN-SUFFIX,mobileapptracking.com,REJECT
 DOMAIN-SUFFIX,mopub.com,REJECT
 DOMAIN-SUFFIX,qchannel01.cn,REJECT
@@ -52,20 +139,13 @@ DOMAIN-SUFFIX,tuanxue360.net,REJECT
 DOMAIN-SUFFIX,udrig.com,REJECT
 DOMAIN-KEYWORD,umeng,REJECT
 DOMAIN-SUFFIX,umengcloud.com,REJECT
-DOMAIN-SUFFIX,voiceads.cn,REJECT
 DOMAIN-SUFFIX,xdrig.com,REJECT
-DOMAIN-SUFFIX,iadsdk.apple.com,REJECT
 DOMAIN,ad.12306.cn,REJECT
 DOMAIN,ad.caiyunapp.com,REJECT
 DOMAIN,ad.jiemian.com,REJECT
 DOMAIN,ad-cn.jovcloud.com,REJECT
 DOMAIN,adnew.wifi8.com,REJECT
 DOMAIN,adplatform.vrtcal.com,REJECT
-DOMAIN,ads.nexage.com,REJECT
-DOMAIN,ads.simplepath.com,REJECT
-DOMAIN,adshow.58.com,REJECT
-DOMAIN,adshows.21cn.com,REJECT
-DOMAIN,ads-twitter.com,REJECT
 DOMAIN,adui.tg.meitu.com,REJECT
 DOMAIN,adxserver.ad.cmvideo.cn,REJECT
 DOMAIN,cdn.segment.com,REJECT
@@ -75,21 +155,16 @@ DOMAIN,js.users.51.la,REJECT
 DOMAIN,static.jpush.cn,REJECT
 DOMAIN,sugar.zhihu.com,REJECT
 DOMAIN,track.58.com,REJECT
-// Baidu
 DOMAIN-SUFFIX,baidustatic.com,REJECT
 DOMAIN,hm.baidu.com,REJECT
 DOMAIN,hmma.baidu.com,REJECT
-DOMAIN,mobads.baidu.com,REJECT
-DOMAIN,mobads-logs.baidu.com,REJECT
 DOMAIN,wn.pos.baidu.com,REJECT
-// Baidu-High-ACC-IP
 DOMAIN,ps.map.baidu.com,REJECT
 DOMAIN,sv.map.baidu.com,REJECT
 DOMAIN,offnavi.map.baidu.com,REJECT
 DOMAIN,newvector.map.baidu.com,REJECT
 DOMAIN,ulog.imap.baidu.com,REJECT
 DOMAIN,newloc.map.n.shifen.com,REJECT
-// Ali
 DOMAIN,acs4baichuan.m.taobao.com,REJECT
 DOMAIN,adash-c.ut.taobao.com,REJECT
 DOMAIN,adashxgc.ut.taobao.com,REJECT
@@ -97,20 +172,16 @@ DOMAIN,adashbc.ut.taobao.com,REJECT
 DOMAIN,adash.man.aliyuncs.com,REJECT
 DOMAIN,apoll.m.taobao.com,REJECT
 DOMAIN,amdc.m.taobao.com,REJECT
-// Tencent
 DOMAIN-SUFFIX,e.qq.com,REJECT
 DOMAIN-SUFFIX,l.qq.com,REJECT
 DOMAIN,pingma.qq.com,REJECT
 DOMAIN,mi.gdt.qq.com,REJECT
 DOMAIN,btrace.qq.com,REJECT
 DOMAIN,mtrace.qq.com,REJECT
-// 163
 DOMAIN-SUFFIX,analytics.126.net,REJECT
 DOMAIN,iadmat.nosdn.127.net,REJECT
 DOMAIN,static.ws.126.net,REJECT
-// AutoNavi
 DOMAIN,nbsdk-baichuan.alicdn.com,REJECT
-// iQiyi
 DOMAIN-SUFFIX,cupid.iqiyi.com,REJECT
 DOMAIN,ifacelog.iqiyi.com,REJECT
 DOMAIN,mbdlog.iqiyi.com,REJECT
@@ -119,31 +190,22 @@ IP-CIDR,101.227.97.240/32,REJECT,no-resolve
 IP-CIDR,101.227.200.11/32,REJECT,no-resolve
 IP-CIDR,101.227.200.28/32,REJECT,no-resolve
 IP-CIDR,124.192.153.42/32,REJECT,no-resolve
-// Youku
 DOMAIN-SUFFIX,atm.youku.com,REJECT
 DOMAIN,ad.mobile.youku.com,REJECT
 DOMAIN,iyes.youku.com,REJECT
-// SohuVideo
 DOMAIN-SUFFIX,aty.sohu.com,REJECT
 DOMAIN,imp.optaim.com,REJECT
 DOMAIN,v2.reachmax.cn,REJECT
 DOMAIN,data.vod.itc.cn,REJECT
-// PPTV
 DOMAIN,asimgs.pplive.cn,REJECT
-// XiMaLaYa
 DOMAIN,ad.ximalaya.com,REJECT
-// Moji
 DOMAIN,ad.api.moji.com,REJECT
 DOMAIN,v1.log.moji.com,REJECT
-// Photoable
 DOMAIN,regist.fotoable.com,REJECT
 DOMAIN,cdn.adapi.fotoable.com,REJECT
-DOMAIN,adapi-analytics.fotoable.net,REJECT
-// UC
 DOMAIN,adtrack.ucweb.com,REJECT
 DOMAIN,applogios.uc.cn,REJECT
 DOMAIN,track.uc.cn,REJECT
-// Internet Service Provider Hijack
 DOMAIN-SUFFIX,17gouwuba.com,REJECT
 DOMAIN-SUFFIX,285680.com,REJECT
 DOMAIN-SUFFIX,51chumoping.com,REJECT
@@ -168,7 +230,6 @@ DOMAIN-SUFFIX,sg536.cn,REJECT
 DOMAIN-SUFFIX,topitme.com,REJECT
 DOMAIN-SUFFIX,tuipenguin.com,REJECT
 IP-CIDR,47.89.59.182/32,REJECT,no-resolve
-// Blacklist
 DOMAIN-SUFFIX,abbyychina.com,REJECT
 DOMAIN-SUFFIX,bartender.cc,REJECT
 DOMAIN-SUFFIX,betterzip.net,REJECT
@@ -268,7 +329,6 @@ DOMAIN-SUFFIX,report.vip.qq.com,REJECT
 DOMAIN-SUFFIX,report.huatuo.qq.com,REJECT
 DOMAIN-SUFFIX,report.qcloud.com,REJECT
 DOMAIN-SUFFIX,googletagmanager.com,REJECT
-DOMAIN-SUFFIX,stats.g.doubleclick.net,REJECT
 DOMAIN-SUFFIX,hpd.baidu.com,REJECT
 DOMAIN-KEYWORD,admarvel,REJECT
 DOMAIN-KEYWORD,admaster,REJECT
@@ -301,61 +361,6 @@ DOMAIN-KEYWORD,umtrack,REJECT
 DOMAIN-KEYWORD,usage,REJECT
 DOMAIN-KEYWORD,wlmonitor,REJECT
 DOMAIN-KEYWORD,zjtoolbar,REJECT
-//Google
-DOMAIN-SUFFIX,fonts.googleapis.com,DIRECT
-DOMAIN-SUFFIX,fonts.gstatic.com,DIRECT
-DOMAIN-SUFFIX,goo.gl,PROXY,force-remote-dns
-DOMAIN-SUFFIX,gvt1.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,youtu.be,PROXY,force-remote-dns
-DOMAIN-SUFFIX,ytimg.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,ggpht.com,PROXY,force-remote-dns
-DOMAIN-KEYWORD,gmail,PROXY,force-remote-dns
-DOMAIN-KEYWORD,google,PROXY,force-remote-dns
-DOMAIN-KEYWORD,gstatic,PROXY,force-remote-dns
-DOMAIN-KEYWORD,youtube,PROXY,force-remote-dns
-//Apple
-DOMAIN,appleiphonecell.com,DIRECT
-USER-AGENT,AppStore*,PROXY
-USER-AGENT,com.apple.appstored*,PROXY
-USER-AGENT,cloudd*,PROXY
-DOMAIN-KEYWORD,icloud,PROXY
-DOMAIN-KEYWORD,itunes,PROXY
-DOMAIN-SUFFIX,aaplimg.com
-DOMAIN-SUFFIX,apple.co,PROXY
-DOMAIN-SUFFIX,appsto.re,PROXY
-DOMAIN-SUFFIX,cdn-apple.com
-DOMAIN-SUFFIX,me.com,PROXY
-DOMAIN-SUFFIX,mzstatic.com,PROXY
-DOMAIN-SUFFIX,icloud.com,PROXY
-DOMAIN-SUFFIX,icloud-content.com,PROXY
-DOMAIN-SUFFIX,itunes.com,PROXY
-DOMAIN-SUFFIX,itunes-apple.com.akadns.net,DIRECT
-IP-CIDR,17.0.0.0/8,PROXY
-DOMAIN-SUFFIX,xp.apple.com,PROXY
-USER-AGENT,com.apple.appstored*,PROXY
-USER-AGENT,*com.apple.mobileme.fmip1,PROXY
-USER-AGENT,*WeatherFoundation*,PROXY
-USER-AGENT,AssistantServices*,PROXY
-USER-AGENT,MobileAsset*,PROXYT
-USER-AGENT,Siri*,PROXY
-USER-AGENT,*siri*,PROXY
-USER-AGENT,%E8%AE%BE%E7%BD%AE*,DIRECT
-DOMAIN,api.smoot.apple.com.cn,DIRECT
-DOMAIN-SUFFIX,apple.com,PROXY,force-remote-dns
-DOMAIN,cn-smp-paymentservices.apple.com,DIRECT
-DOMAIN,smp-device.apple.com,DIRECT
-DOMAIN,smp-device-content.apple.com,DIRECT
-DOMAIN-SUFFIX,ess.apple.com,DIRECT
-DOMAIN-SUFFIX,push.apple.com,DIRECT
-DOMAIN-SUFFIX,gs-loc.apple.com,DIRECT
-DOMAIN-SUFFIX,ls.apple.com,DIRECT
-DOMAIN-SUFFIX,push-apple.com.akadns.net,DIRECT
-USER-AGENT,%E5%9C%B0%E5%9B%BE*,DIRECT
-IP-CIDR,67.198.55.0/24,PROXY,no-resolve
-IP-CIDR,91.108.0.0/16,PROXY,no-resolve
-IP-CIDR,109.239.140.0/24,PROXY,no-resolve
-IP-CIDR,149.154.0.0/16,PROXY,no-resolve
-IP-CIDR,74.125.23.127/32,PROXY,no-resolve
 USER-AGENT,%E5%8D%B3%E5%88%BB*,DIRECT
 USER-AGENT,*Vainglory*,DIRECT
 USER-AGENT,arrowio*,DIRECT
@@ -484,7 +489,91 @@ IP-CIDR,127.0.0.0/8,DIRECT
 IP-CIDR,172.0.0.0/12,DIRECT
 IP-CIDR,192.168.0.0/16,DIRECT
 GEOIP,CN,DIRECT
+DOMAIN-KEYWORD,amazon,PROXY,force-remote-dns
+DOMAIN-KEYWORD,appledaily,PROXY,force-remote-dns
+DOMAIN-KEYWORD,blogspot,PROXY,force-remote-dns
+DOMAIN-KEYWORD,fbcdn,PROXY,force-remote-dns
+DOMAIN-KEYWORD,facebook,PROXY,force-remote-dns
+DOMAIN-KEYWORD,instagram,PROXY,force-remote-dns
+DOMAIN-KEYWORD,twitter,PROXY,force-remote-dns
+DOMAIN-KEYWORD,twimg,PROXY,force-remote-dns
+DOMAIN-KEYWORD,appledaily,PROXY,force-remote-dns
+DOMAIN-KEYWORD,beetalk,PROXY,force-remote-dns
+DOMAIN-KEYWORD,blogspot,PROXY,force-remote-dns
+DOMAIN-KEYWORD,dropbox,PROXY,force-remote-dns
+DOMAIN-KEYWORD,telegram,PROXY,force-remote-dns
+DOMAIN-KEYWORD,whatsapp,PROXY,force-remote-dns
+DOMAIN-SUFFIX,1e100.net,PROXY,force-remote-dns
+DOMAIN-SUFFIX,2mdn.net,PROXY,force-remote-dns
+DOMAIN-SUFFIX,abc.xyz,PROXY,force-remote-dns
+DOMAIN-SUFFIX,akamai.net,PROXY,force-remote-dns
+DOMAIN-SUFFIX,appspot.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,autodraw.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,bandwagonDOMAIN.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,blogblog.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,chromeexperiments.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,creativelab5.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,crittercism.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,culturalspot.org,PROXY,force-remote-dns
+DOMAIN-SUFFIX,dartlang.org,PROXY,force-remote-dns
+DOMAIN-SUFFIX,fb.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,fb.me,PROXY,force-remote-dns
+DOMAIN-SUFFIX,fbcdn.net,PROXY,force-remote-dns
+DOMAIN-SUFFIX,fbsbx.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,gcr.io,PROXY,force-remote-dns
+DOMAIN-SUFFIX,gosetsuden.jp,PROXY,force-remote-dns
+DOMAIN-SUFFIX,gvt1.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,gwtproject.org,PROXY,force-remote-dns
+DOMAIN-SUFFIX,heroku.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,html5rocks.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,keyhole.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,kobo.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,kobobooks.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,madewithcode.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,material.io,PROXY,force-remote-dns
+DOMAIN-SUFFIX,messenger.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,netmarble.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,nianticlabs.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,pinimg.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,pixiv.net,PROXY,force-remote-dns
+DOMAIN-SUFFIX,pubnub.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,t.co,PROXY,force-remote-dns
+DOMAIN-SUFFIX,tensorflow.org,PROXY,force-remote-dns
+DOMAIN-SUFFIX,thefacebook.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,toggleable.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,torproject.org,PROXY,force-remote-dns
+DOMAIN-SUFFIX,twitpic.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,unfiltered.news,PROXY,force-remote-dns
+DOMAIN-SUFFIX,waveprotocol.org,PROXY,force-remote-dns
+DOMAIN-SUFFIX,webmproject.org,PROXY,force-remote-dns
+DOMAIN-SUFFIX,webrtc.org,PROXY,force-remote-dns
+IP-CIDR,13.32.0.0/16,PROXY,no-resolve
+IP-CIDR,13.33.0.0/16,PROXY,no-resolve
+IP-CIDR,13.35.0.0/17,PROXY,no-resolve
+IP-CIDR,18.184.0.0/15,PROXY,no-resolve
+IP-CIDR,18.194.0.0/15,PROXY,no-resolve
+IP-CIDR,18.208.0.0/13,PROXY,no-resolve
+IP-CIDR,18.232.0.0/14,PROXY,no-resolve
+IP-CIDR,52.200.0.0/13,PROXY,no-resolve
+IP-CIDR,52.58.0.0/15,PROXY,no-resolve
+IP-CIDR,52.74.0.0/16,PROXY,no-resolve
+IP-CIDR,52.77.0.0/16,PROXY,no-resolve
+IP-CIDR,52.84.0.0/15,PROXY,no-resolve
+IP-CIDR,54.156.0.0/14,PROXY,no-resolve
+IP-CIDR,54.226.0.0/15,PROXY,no-resolve
+IP-CIDR,54.230.156.0/22,PROXY,no-resolve
+IP-CIDR,54.93.0.0/16,PROXY,no-resolve
+IP-CIDR,109.239.140.0/24,PROXY,no-resolve
+IP-CIDR,149.154.160.0/20,PROXY,no-resolve
+IP-CIDR,149.154.164.0/22,PROXY,no-resolve
+IP-CIDR,149.154.168.0/22,PROXY,no-resolve
+IP-CIDR,149.154.172.0/22,PROXY,no-resolve
+IP-CIDR,91.108.4.0/22,PROXY,no-resolve
+IP-CIDR,91.108.56.0/22,PROXY,no-resolve
+IP-CIDR,91.108.8.0/22,PROXY,no-resolve
 FINAL,PROXY
+
+
 [Host]
 [URL Rewrite]
 ^https?://(www.)?g.cn https://www.google.com 302
