--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -1,10 +1,11 @@
 [General]
 bypass-system = true
-dns-server = system,119.29.29.29,1.0.0.1,223.5.5.5
+dns-server = system
 skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,17.0.0.0/8,localhost,*.local,*.crashlytics.com
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
 [Rule]
-
+IP-CIDR,1.0.0.1/24,PROXY,no-resolve
+IP-CIDR,1.1.1.1/24,PROXY,no-resolve
 DOMAIN-SUFFIX,sub.ssr.sx,PROXY
 DOMAIN-SUFFIX,ssr.ac,PROXY
 DOMAIN-KEYWORD,google,PROXY,force-remote-dns
@@ -39,7 +40,6 @@ DOMAIN-SUFFIX,adash.man.aliyuncs.com,REJECT
 DOMAIN-SUFFIX,adashbc.ut.taobao.com,REJECT
 DOMAIN-SUFFIX,adash-c.ut.taobao.com,REJECT
 DOMAIN-SUFFIX,adashxgc.ut.taobao.com,REJECT
-DOMAIN-SUFFIX,amdc.m.taobao.com,REJECT
 DOMAIN-SUFFIX,apoll.m.taobao.com,REJECT
 DOMAIN-SUFFIX,nbsdk-baichuan.alicdn.com,REJECT
 DOMAIN-SUFFIX,c-nfa.jd.com,REJECT
@@ -68,7 +68,6 @@ DOMAIN-SUFFIX,youtube.112.2o7.net,REJECT
 DOMAIN-SUFFIX,ift.tt,PROXY,force-remote-dns
 DOMAIN-SUFFIX,btshoufa.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,github.com,PROXY,force-remote-dns
-IP-CIDR,8.8.8.8/32,PROXY,no-resolve
 DOMAIN-SUFFIX,live.com,PROXY
 DOMAIN-SUFFIX,sharepoint.com,PROXY
 USER-AGENT,Microsoft Office*,PROXY
@@ -171,7 +170,6 @@ DOMAIN,adashxgc.ut.taobao.com,REJECT
 DOMAIN,adashbc.ut.taobao.com,REJECT
 DOMAIN,adash.man.aliyuncs.com,REJECT
 DOMAIN,apoll.m.taobao.com,REJECT
-DOMAIN,amdc.m.taobao.com,REJECT
 DOMAIN-SUFFIX,e.qq.com,REJECT
 DOMAIN-SUFFIX,l.qq.com,REJECT
 DOMAIN,pingma.qq.com,REJECT
@@ -572,8 +570,6 @@ IP-CIDR,91.108.4.0/22,PROXY,no-resolve
 IP-CIDR,91.108.56.0/22,PROXY,no-resolve
 IP-CIDR,91.108.8.0/22,PROXY,no-resolve
 FINAL,PROXY
-
-
 [Host]
 [URL Rewrite]
 ^https?://(www.)?g.cn https://www.google.com 302
