--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -4,6 +4,7 @@ dns-server = system
 skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,17.0.0.0/8,localhost,*.local,*.crashlytics.com
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
 [Rule]
+DOMAIN-SUFFIX,applvn.com,REJECT
 DOMAIN,audid-api.taobao.com,REJECT
 DOMAIN-SUFFIX,btrace.qq.com,REJECT
 DOMAIN-SUFFIX,e.qq.com,REJECT
@@ -13,7 +14,6 @@ DOMAIN-SUFFIX,mtrace.qq.com,REJECT
 DOMAIN-SUFFIX,pingma.qq.com,REJECT
 DOMAIN-SUFFIX,googletagservices.com,REJECT
 DOMAIN,www.gstatic.com,REJECT
-IP-CIDR,198.11.189.2/32,DIRECT,no-resolve
 DOMAIN-SUFFIX,31.media.tumblr.com,REJECT
 DOMAIN-SUFFIX,92x.tumblr.com,REJECT
 DOMAIN-SUFFIX,its-dori.tumblr.com,REJECT
@@ -58,48 +58,10 @@ DOMAIN,iconfactory.com,REJECT
 DOMAIN-SUFFIX,ehg-youtube.hitbox.com,REJECT
 DOMAIN-SUFFIX,nicorette.co.kr,REJECT
 DOMAIN-SUFFIX,youtube.112.2o7.net,REJECT
-DOMAIN-SUFFIX,hotmail.com,PROXY
 DOMAIN,ogma.iad.appboy.com,REJECT
 DOMAIN-SUFFIX,hockeyapp.net,REJECT
 DOMAIN-SUFFIX,flurry.com,REJECT
 DOMAIN-SUFFIX,lnk0.com,REJECT
-DOMAIN-SUFFIX,manhuagui.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,bit.ly,PROXY,force-remote-dns
-DOMAIN-SUFFIX,ift.tt,PROXY,force-remote-dns
-DOMAIN-SUFFIX,btshoufa.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,github.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,live.com,PROXY
-DOMAIN-SUFFIX,sharepoint.com,PROXY
-USER-AGENT,Microsoft Office*,PROXY
-DOMAIN-SUFFIX,microsoft.com,PROXY
-DOMAIN-SUFFIX,sub.ssr.sx,PROXY
-DOMAIN-SUFFIX,ssr.ac,PROXY
-USER-AGENT,%E8%AE%BE%E7%BD%AE*,PROXY
-USER-AGENT,*com.apple.mobileme.fmip1,PROXY
-USER-AGENT,*WeatherFoundation*,PROXY
-USER-AGENT,AssistantServices*,PROXY
-USER-AGENT,MobileAsset*,PROXY
-USER-AGENT,Siri*,PROXY
-USER-AGENT,cloudd*,PROXY
-USER-AGENT,com.apple.appstored*,PROXY
-USER-AGENT,com.apple.geod*,PROXY
-DOMAIN-SUFFIX,aaplimg.com,PROXY
-DOMAIN-SUFFIX,apple.co,PROXY
-DOMAIN-SUFFIX,apple.com,PROXY
-DOMAIN-SUFFIX,icloud.com,PROXY
-DOMAIN-SUFFIX,icloud-content.com,PROXY
-DOMAIN-SUFFIX,itunes.com,PROXY
-DOMAIN-SUFFIX,me.com,PROXY
-DOMAIN-SUFFIX,mzstatic.com,PROXY
-DOMAIN-SUFFIX,appsto.re,PROXY
-DOMAIN,itunes.apple.com,PROXY
-DOMAIN,hls.itunes.apple.com,PROXY
-IP-CIDR,17.0.0.0/8,PROXY,no-resolve
-DOMAIN-SUFFIX,push-apple.com.akadns.net,DIRECT
-USER-AGENT,%E5%9C%B0%E5%9B%BE*,DIRECT
-
-DOMAIN-SUFFIX,lxysh.co,DIRECT
-DOMAIN-KEYWORD,speedtest,PROXY
 DOMAIN-SUFFIX,adinall.com,REJECT
 DOMAIN-SUFFIX,adjust.com,REJECT
 DOMAIN-SUFFIX,adlefee.com,REJECT
@@ -483,6 +445,48 @@ IP-CIDR,127.0.0.0/8,DIRECT
 IP-CIDR,172.0.0.0/12,DIRECT
 IP-CIDR,192.168.0.0/16,DIRECT
 GEOIP,CN,DIRECT
+USER-AGENT,%E5%9C%B0%E5%9B%BE*,DIRECT
+IP-CIDR,198.11.189.2/32,DIRECT,no-resolve
+DOMAIN-SUFFIX,lxysh.co,DIRECT
+DOMAIN-SUFFIX,cmbchina.com,DIRECT
+DOMAIN-SUFFIX,push-apple.com.akadns.net,DIRECT
+DOMAIN-SUFFIX,36krcnd.com,DIRECT
+DOMAIN-SUFFIX,feedly.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,playno1,PROXY
+DOMAIN-SUFFIX,sub.ssr.sx,PROXY
+DOMAIN-SUFFIX,ssr.ac,PROXY
+DOMAIN-SUFFIX,manhuagui.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,bit.ly,PROXY,force-remote-dns
+DOMAIN-SUFFIX,ift.tt,PROXY,force-remote-dns
+DOMAIN-SUFFIX,btshoufa.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,github.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,live.com,PROXY
+DOMAIN-SUFFIX,hotmail.com,PROXY
+DOMAIN-SUFFIX,sharepoint.com,PROXY
+USER-AGENT,Microsoft Office*,PROXY
+DOMAIN-SUFFIX,microsoft.com,PROXY
+USER-AGENT,%E8%AE%BE%E7%BD%AE*,PROXY
+USER-AGENT,*com.apple.mobileme.fmip1,PROXY
+USER-AGENT,*WeatherFoundation*,PROXY
+USER-AGENT,AssistantServices*,PROXY
+USER-AGENT,MobileAsset*,PROXY
+USER-AGENT,Siri*,PROXY
+USER-AGENT,cloudd*,PROXY
+USER-AGENT,com.apple.appstored*,PROXY
+USER-AGENT,com.apple.geod*,PROXY
+DOMAIN-SUFFIX,aaplimg.com,PROXY
+DOMAIN-SUFFIX,apple.co,PROXY
+DOMAIN-SUFFIX,apple.com,PROXY
+DOMAIN-SUFFIX,icloud.com,PROXY
+DOMAIN-SUFFIX,icloud-content.com,PROXY
+DOMAIN-SUFFIX,itunes.com,PROXY
+DOMAIN-SUFFIX,me.com,PROXY
+DOMAIN-SUFFIX,mzstatic.com,PROXY
+DOMAIN-SUFFIX,appsto.re,PROXY
+DOMAIN,itunes.apple.com,PROXY
+DOMAIN,hls.itunes.apple.com,PROXY
+IP-CIDR,17.0.0.0/8,PROXY,no-resolve
+DOMAIN-KEYWORD,speedtest,PROXY
 DOMAIN-KEYWORD,amazon,PROXY,force-remote-dns
 DOMAIN-KEYWORD,appledaily,PROXY,force-remote-dns
 DOMAIN-KEYWORD,blogspot,PROXY,force-remote-dns
@@ -503,7 +507,7 @@ DOMAIN-SUFFIX,abc.xyz,PROXY,force-remote-dns
 DOMAIN-SUFFIX,akamai.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,appspot.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,autodraw.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,bandwagonDOMAIN.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,bandwagon.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,blogblog.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,chromeexperiments.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,creativelab5.com,PROXY,force-remote-dns
@@ -559,14 +563,9 @@ IP-CIDR,54.226.0.0/15,PROXY,no-resolve
 IP-CIDR,54.230.156.0/22,PROXY,no-resolve
 IP-CIDR,54.93.0.0/16,PROXY,no-resolve
 IP-CIDR,109.239.140.0/24,PROXY,no-resolve
-IP-CIDR,149.154.160.0/20,PROXY,no-resolve
-IP-CIDR,149.154.164.0/22,PROXY,no-resolve
-IP-CIDR,149.154.168.0/22,PROXY,no-resolve
-IP-CIDR,149.154.172.0/22,PROXY,no-resolve
-IP-CIDR,91.108.4.0/22,PROXY,no-resolve
-IP-CIDR,91.108.56.0/22,PROXY,no-resolve
-IP-CIDR,91.108.8.0/22,PROXY,no-resolve
-DOMAIN-SUFFIX,v2ex.com,PROXY,force-remote-dns
+IP-CIDR,149.154.0.0/16,PROXY,no-resolve
+IP-CIDR,91.108.0.0/16,PROXY,no-resolve
+DOMAIN-SUFFIX,v2ex.com,PROXY
 FINAL,PROXY
 [Host]
 [URL Rewrite]
