--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -451,8 +451,21 @@ DOMAIN-SUFFIX,lxysh.co,DIRECT
 DOMAIN-SUFFIX,cmbchina.com,DIRECT
 DOMAIN-SUFFIX,push-apple.com.akadns.net,DIRECT
 DOMAIN-SUFFIX,36krcnd.com,DIRECT
+// Google
+IP-CIDR,173.194.0.0/16,PROXY,no-resolve
+IP-CIDR,74.125.0.0/16,PROXY,no-resolve
+
+// BBC
+USER-AGENT,BBCiPlayer*,PROXY
+DOMAIN-KEYWORD,co.uk,PROXY
+DOMAIN-KEYWORD,uk-live,PROXY
+DOMAIN-SUFFIX,bbc.co,PROXY
+DOMAIN-SUFFIX,bbc.com,PROXY
+
 DOMAIN-SUFFIX,feedly.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,playno1,PROXY
+DOMAIN-KEYWORD,speedtest,PROXY
+DOMAIN-SUFFIX,playno1.com,PROXY
+DOMAIN-SUFFIX,qrrro.com,PROXY
 DOMAIN-SUFFIX,sub.ssr.sx,PROXY
 DOMAIN-SUFFIX,ssr.ac,PROXY
 DOMAIN-SUFFIX,manhuagui.com,PROXY,force-remote-dns
@@ -464,7 +477,7 @@ DOMAIN-SUFFIX,live.com,PROXY
 DOMAIN-SUFFIX,hotmail.com,PROXY
 DOMAIN-SUFFIX,sharepoint.com,PROXY
 USER-AGENT,Microsoft Office*,PROXY
-DOMAIN-SUFFIX,microsoft.com,PROXY
+DOMAIN-KEYWORD,microsoft,PROXY
 USER-AGENT,%E8%AE%BE%E7%BD%AE*,PROXY
 USER-AGENT,*com.apple.mobileme.fmip1,PROXY
 USER-AGENT,*WeatherFoundation*,PROXY
@@ -486,7 +499,6 @@ DOMAIN-SUFFIX,appsto.re,PROXY
 DOMAIN,itunes.apple.com,PROXY
 DOMAIN,hls.itunes.apple.com,PROXY
 IP-CIDR,17.0.0.0/8,PROXY,no-resolve
-DOMAIN-KEYWORD,speedtest,PROXY
 DOMAIN-KEYWORD,amazon,PROXY,force-remote-dns
 DOMAIN-KEYWORD,appledaily,PROXY,force-remote-dns
 DOMAIN-KEYWORD,blogspot,PROXY,force-remote-dns
